# legal-cite-pl

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
legal_cite/: __init__.py  core.py  server.py
